<resources>
    <string name="app_name">Шаурма закончилась</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">группа</string>
    <string name="description">кабинет</string>
    <string name="name">имя</string>
    <string name="time">10.30-12.00</string>
    <string name="subject">предмет</string>
</resources>