<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="16dp">

    <TextView
            android:id="@+id/list_time"
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="0"
            android:textSize="24sp"
            android:typeface="normal"
            app:fontFamily="sans-serif-black"
            android:visibility="visible" />

    <TextView
            android:id="@+id/list_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000000" />

    <TextView
            android:text="@string/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_subject" />

    <TextView
            android:id="@+id/list_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

    <TextView
            android:id="@+id/list_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/description"
            android:textSize="27sp"
            android:typeface="normal"
            app:fontFamily="sans-serif-black"
            android:textColor="#000000" />

</LinearLayout>